Moved implementation box code to its own file.
git-svn-id: https://zero-install.svn.sourceforge.net/svnroot/zero-install/trunk/0publish-gui/trunk/0publish-gui@1354 9f8c893c-44ee-0310-b757-c8ca8341c71e

--- a/0publish-gui.glade
+++ b/0publish-gui.glade
@@ -1674,7 +1674,7 @@ Insecure</property>
 		  <property name="above_child">False</property>
 
 		  <child>
-		    <widget class="GtkComboBoxEntry" id="comboboxentry1">
+		    <widget class="GtkComboBoxEntry" id="main_binary">
 		      <property name="visible">True</property>
 		      <property name="add_tearoffs">False</property>
 		      <property name="has_frame">True</property>
