--- a/0publish-gui.glade
+++ b/0publish-gui.glade
@@ -899,13 +899,16 @@
 	      <property name="justification">GTK_JUSTIFY_LEFT</property>
 	      <property name="wrap_mode">GTK_WRAP_WORD</property>
 	      <property name="cursor_visible">False</property>
-	      <property name="pixels_above_lines">4</property>
+	      <property name="pixels_above_lines">0</property>
 	      <property name="pixels_below_lines">0</property>
 	      <property name="pixels_inside_wrap">0</property>
 	      <property name="left_margin">4</property>
 	      <property name="right_margin">4</property>
 	      <property name="indent">0</property>
-	      <property name="text" translatable="yes">To create a feed for a new program, fill in the fields on the &quot;Feed information&quot; tab and then add at least one version using the &quot;Add Archive&quot; button in the &quot;Versions&quot; tab.
+	      <property name="text" translatable="yes">0publish-gui
+Thomas Leonard
+
+To create a feed for a new program, fill in the fields on the &quot;Feed information&quot; tab and then add at least one version using the &quot;Add Archive&quot; button in the &quot;Versions&quot; tab.
 
 If your program needs a library, use the &quot;Add Requires&quot; button to specifiy this. Create groups to avoid having to list the requirements and attributes again for every version.
 
@@ -917,7 +920,17 @@ To publish a feed on the web, you must also sign it. Select the key you want to 
 
 For more information, visit:
 
-  http://0install.net/dev.html</property>
+  http://0install.net/dev.html
+
+
+Conditions
+
+This program is free software; you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation; either version 2 of the License, or (at your option) any later version.
+
+This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License along with this program; if not, write to the Free Software Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+</property>
 	    </widget>
 	  </child>
 	</widget>
@@ -1981,7 +1994,7 @@ application/vnd.ms-cab-compressed
 			  <property name="editable">True</property>
 			  <property name="visibility">True</property>
 			  <property name="max_length">0</property>
-			  <property name="text" translatable="yes">http://localhost/~talex/gnu-hello-1.3.tar.bz2</property>
+			  <property name="text" translatable="yes"></property>
 			  <property name="has_frame">True</property>
 			  <property name="invisible_char">*</property>
 			  <property name="activates_default">True</property>
