--- a/0publish-gui.glade
+++ b/0publish-gui.glade
@@ -1158,7 +1158,7 @@ You should have received a copy of the GNU General Public License along with thi
 	    </widget>
 	    <packing>
 	      <property name="padding">10</property>
-	      <property name="expand">True</property>
+	      <property name="expand">False</property>
 	      <property name="fill">True</property>
 	    </packing>
 	  </child>
@@ -2548,7 +2548,7 @@ application/vnd.ms-cab-compressed
 			<widget class="GtkTable" id="table3">
 			  <property name="visible">True</property>
 			  <property name="n_rows">3</property>
-			  <property name="n_columns">2</property>
+			  <property name="n_columns">3</property>
 			  <property name="homogeneous">False</property>
 			  <property name="row_spacing">4</property>
 			  <property name="column_spacing">4</property>
@@ -2638,38 +2638,80 @@ application/vnd.ms-cab-compressed
 			  </child>
 
 			  <child>
-			    <widget class="GtkEventBox" id="eventbox3">
+			    <widget class="GtkEntry" id="env_default">
 			      <property name="visible">True</property>
+			      <property name="tooltip" translatable="yes">If the environment variable didn't already have a value, assume it was set to this. Use this for variables which have a special meaning when not set.</property>
+			      <property name="can_focus">True</property>
+			      <property name="editable">True</property>
+			      <property name="visibility">True</property>
+			      <property name="max_length">0</property>
+			      <property name="text" translatable="yes"></property>
+			      <property name="has_frame">True</property>
+			      <property name="invisible_char">*</property>
+			      <property name="activates_default">False</property>
+			    </widget>
+			    <packing>
+			      <property name="left_attach">1</property>
+			      <property name="right_attach">3</property>
+			      <property name="top_attach">2</property>
+			      <property name="bottom_attach">3</property>
+			      <property name="y_options"></property>
+			    </packing>
+			  </child>
+
+			  <child>
+			    <widget class="GtkLabel" id="label60">
+			      <property name="visible">True</property>
+			      <property name="label" translatable="yes">&lt;chosen-version&gt;/</property>
+			      <property name="use_underline">False</property>
+			      <property name="use_markup">False</property>
+			      <property name="justify">GTK_JUSTIFY_LEFT</property>
+			      <property name="wrap">False</property>
+			      <property name="selectable">False</property>
+			      <property name="xalign">0</property>
+			      <property name="yalign">0.5</property>
+			      <property name="xpad">0</property>
+			      <property name="ypad">0</property>
+			      <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
+			      <property name="width_chars">-1</property>
+			      <property name="single_line_mode">False</property>
+			      <property name="angle">0</property>
+			    </widget>
+			    <packing>
+			      <property name="left_attach">1</property>
+			      <property name="right_attach">2</property>
+			      <property name="top_attach">1</property>
+			      <property name="bottom_attach">2</property>
+			      <property name="x_options">fill</property>
+			      <property name="y_options"></property>
+			    </packing>
+			  </child>
+
+			  <child>
+			    <widget class="GtkEventBox" id="eventbox4">
+			      <property name="width_request">0</property>
+			      <property name="visible">True</property>
+			      <property name="tooltip" translatable="yes">The name of the environment variable to set. The selected file or directory will be prepended to the value of the variable.</property>
 			      <property name="visible_window">True</property>
 			      <property name="above_child">False</property>
 
 			      <child>
-				<widget class="GtkEventBox" id="eventbox4">
-				  <property name="width_request">0</property>
+				<widget class="GtkComboBoxEntry" id="env_name">
 				  <property name="visible">True</property>
-				  <property name="tooltip" translatable="yes">The name of the environment variable to set. The selected file or directory will be prepended to the value of the variable.</property>
-				  <property name="visible_window">True</property>
-				  <property name="above_child">False</property>
-
-				  <child>
-				    <widget class="GtkComboBoxEntry" id="env_name">
-				      <property name="visible">True</property>
-				      <property name="items" translatable="yes">PATH
+				  <property name="items" translatable="yes">PATH
 PYTHONPATH
 LD_LIBRARY_PATH
 XDG_CONFIG_DIRS
 XDG_DATA_DIRS</property>
-				      <property name="add_tearoffs">False</property>
-				      <property name="has_frame">True</property>
-				      <property name="focus_on_click">True</property>
-				    </widget>
-				  </child>
+				  <property name="add_tearoffs">False</property>
+				  <property name="has_frame">True</property>
+				  <property name="focus_on_click">True</property>
 				</widget>
 			      </child>
 			    </widget>
 			    <packing>
 			      <property name="left_attach">1</property>
-			      <property name="right_attach">2</property>
+			      <property name="right_attach">3</property>
 			      <property name="top_attach">0</property>
 			      <property name="bottom_attach">1</property>
 			      <property name="x_options">fill</property>
@@ -2695,34 +2737,11 @@ XDG_DATA_DIRS</property>
 			      </child>
 			    </widget>
 			    <packing>
-			      <property name="left_attach">1</property>
-			      <property name="right_attach">2</property>
+			      <property name="left_attach">2</property>
+			      <property name="right_attach">3</property>
 			      <property name="top_attach">1</property>
 			      <property name="bottom_attach">2</property>
-			      <property name="x_options">fill</property>
 			      <property name="y_options">fill</property>
-			    </packing>
-			  </child>
-
-			  <child>
-			    <widget class="GtkEntry" id="env_default">
-			      <property name="visible">True</property>
-			      <property name="tooltip" translatable="yes">If the environment variable didn't already have a value, assume it was set to this. Use this for variables which have a special meaning when not set.</property>
-			      <property name="can_focus">True</property>
-			      <property name="editable">True</property>
-			      <property name="visibility">True</property>
-			      <property name="max_length">0</property>
-			      <property name="text" translatable="yes"></property>
-			      <property name="has_frame">True</property>
-			      <property name="invisible_char">*</property>
-			      <property name="activates_default">False</property>
-			    </widget>
-			    <packing>
-			      <property name="left_attach">1</property>
-			      <property name="right_attach">2</property>
-			      <property name="top_attach">2</property>
-			      <property name="bottom_attach">3</property>
-			      <property name="y_options"></property>
 			    </packing>
 			  </child>
 			</widget>
