Added support for autopackage-format archives. Store the MIME-type attribute for all archives.
git-svn-id: https://zero-install.svn.sourceforge.net/svnroot/zero-install/trunk/0publish-gui/trunk/0publish-gui@1414 9f8c893c-44ee-0310-b757-c8ca8341c71e

--- a/0publish-gui.glade
+++ b/0publish-gui.glade
@@ -2037,15 +2037,17 @@ Zope Public License (ZPL)
 		      <child>
 			<widget class="GtkComboBox" id="mime_type">
 			  <property name="visible">True</property>
-			  <property name="items" translatable="yes">(auto)
+			  <property name="items" translatable="yes">(auto-detect)
+Autopackage
+application/vnd.ms-cab-compressed
 application/x-bzip-compressed-tar
 application/x-compressed-tar
-application/x-rpm
 application/x-deb
-application/zip
-application/vnd.ms-cab-compressed
+application/x-lzma-compressed-tar
+application/x-rpm
 application/x-tar
-application/x-lzma-compressed-tar</property>
+application/zip
+</property>
 			  <property name="add_tearoffs">False</property>
 			  <property name="focus_on_click">True</property>
 			</widget>
