--- a/0publish-gui.glade
+++ b/0publish-gui.glade
@@ -1504,7 +1504,8 @@ You should have received a copy of the GNU General Public License along with thi
 		<widget class="GtkComboBoxEntry" id="os">
 		  <property name="visible">True</property>
 		  <property name="items" translatable="yes">*
-Linux</property>
+Linux
+FreeBSD</property>
 		  <property name="add_tearoffs">False</property>
 		  <property name="has_frame">True</property>
 		  <property name="focus_on_click">True</property>
